WTR::InjectedBundlePage::willSendRequestForFrame() leaks a WKDataRef <https://webkit.org/b/194286> <rdar://problem/47815558>

Reviewed by Alexey Proskuryakov.

* WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp:
(WTR::InjectedBundlePage::willSendRequestForFrame): Use
WKRetainPtr<> to avoid leaking the WKDataRef.


Canonical link: https://commits.webkit.org/208788@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@241034 268f45cc-cd09-0410-ab3c-d52691b4dbfc